--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Hello World!!!</h1>
+    <form><input type="checkbox"></form>
+    <form><input type="checkbox"></form>
 </body>
 </html>
